--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -51,11 +51,32 @@
           </li>
 
           <li class="sidebar-item">
+            <a href="/admin/reviews" class="sidebar-link">
+              <i class="bi bi-chat-quote"></i>
+              <span>Rəylər</span>
+            </a>
+          </li>
+
+          <li class="sidebar-item">
             <a th:href="@{/admin/categories}" class="sidebar-link">
               <i class="bi bi-list-ul"></i>
               <span>Kateqoriyalar</span>
             </a>
           </li>
+
+          <li class="sidebar-item">
+            <a href="/admin/gallery" class="sidebar-link">
+              <i class="bi bi-images"></i>
+              <span>Qalereya</span>
+            </a>
+          </li>
+
+          <li class="sidebar-item">
+            <a href="/admin/footer" class="sidebar-link">
+              <i class="bi bi-pin-map"></i>
+              <span>Əlaqə və Footer</span>
+            </a>
+
         </ul>
       </div>
 
