--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -7,6 +7,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Admin Dashboard - La Beauty</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
 
   <!-- Mazer CSS -->
   <link rel="stylesheet" th:href="@{/admin/css/bootstrap.css}">
