adminTestimonial is ready

--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -52,9 +52,16 @@
           </li>
 
           <li class="sidebar-item">
-            <a href="/admin/reviews" class="sidebar-link">
-              <i class="bi bi-chat-quote"></i>
+            <a th:href="@{/admin/testimonials}" class="sidebar-link">
+              <i class="bi bi-chat-quote fs-5 me-2"></i>
               <span>Rəylər</span>
+            </a>
+          </li>
+
+          <li class="sidebar-item">
+            <a th:href="@{/admin/testimonial-text}" class="sidebar-link">
+              <i class="bi bi-pencil-square fs-5 me-2"></i>
+              <span>Rəylər Başlığı</span>
             </a>
           </li>
 
