adminGallery is ready

--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -73,7 +73,14 @@
           </li>
 
           <li class="sidebar-item">
-            <a href="/admin/gallery" class="sidebar-link">
+            <a th:href="@{/admin/services}" class="sidebar-link">
+              <i class="bi bi-briefcase"></i>
+              <span>Xidmətlər</span>
+            </a>
+          </li>
+
+          <li class="sidebar-item">
+            <a th:href="@{/admin/gallery}" class="sidebar-link">
               <i class="bi bi-images"></i>
               <span>Qalereya</span>
             </a>
@@ -109,7 +116,7 @@
           <p>2025 © La Beauty Admin</p>
         </div>
         <div class="float-end">
-          <p>Crafted with <span class="text-danger"><i class="bi bi-heart-fill"></i></span> by Lamiya</p>
+          <p>Crafted with <span class="text-danger"><i class="bi bi-heart-fill"></i></span> by Lamia</p>
         </div>
       </div>
     </footer>
