--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -94,6 +94,13 @@
           </li>
 
           <li class="sidebar-item">
+            <a th:href="@{/admin/team-members}" class="sidebar-link">
+              <i class="bi bi-people-fill fs-5 me-2"></i>
+              <span>Komanda</span>
+            </a>
+          </li>
+
+          <li class="sidebar-item">
             <a th:href="@{/admin/footer}" class="sidebar-link">
               <i class="bi bi-geo-alt fs-5 me-2"></i>
               <span>Footer</span>
