--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -101,6 +101,13 @@
           </li>
 
           <li class="sidebar-item">
+            <a th:href="@{/admin/team-text}" class="sidebar-link">
+              <i class="bi bi-type fs-5 me-2"></i>
+              <span>Komanda Başlığı</span>
+            </a>
+          </li>
+
+          <li class="sidebar-item">
             <a th:href="@{/admin/footer}" class="sidebar-link">
               <i class="bi bi-geo-alt fs-5 me-2"></i>
               <span>Footer</span>
