adminContact is ready

--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -108,6 +108,13 @@
           </li>
 
           <li class="sidebar-item">
+            <a th:href="@{/admin/contacts}" class="sidebar-link">
+              <i class="bi bi-telephone"></i>
+              <span>Əlaqə</span>
+            </a>
+          </li>
+
+          <li class="sidebar-item">
             <a th:href="@{/admin/footer}" class="sidebar-link">
               <i class="bi bi-geo-alt fs-5 me-2"></i>
               <span>Footer</span>
