--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -36,6 +36,13 @@
               <span>Dashboard</span>
             </a>
           </li>
+          <li class="sidebar-item">
+            <a th:href="@{/admin/home}" class="sidebar-link">
+              <i class="bi bi-house-door fs-5 me-2"></i>
+              <span>Ana səhifə idarəetməsi</span>
+            </a>
+          </li>
+
 
           <li class="sidebar-item">
             <a th:href="@{/admin/about}" class="sidebar-link">
