--- a/src/main/resources/templates/admin/team/create.html
+++ b/src/main/resources/templates/admin/team/create.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{admin/layout}">
 
 <main layout:fragment="content">
@@ -10,29 +11,63 @@
 
         <form th:action="@{/admin/team-members/create}" th:object="${member}" method="post">
             <div class="row">
+
+                <!-- Ad Soyad -->
                 <div class="col-md-6 mb-3">
                     <label>Ad Soyad</label>
                     <input type="text" th:field="*{name}" class="form-control" required/>
                 </div>
+
+                <!-- Vəzifə -->
                 <div class="col-md-6 mb-3">
                     <label>Vəzifə</label>
                     <input type="text" th:field="*{position}" class="form-control" required/>
                 </div>
+
+                <!-- Şəkil URL -->
                 <div class="col-md-6 mb-3">
                     <label>Şəkil URL</label>
-                    <input type="text" th:field="*{imageUrl}" class="form-control"/>
+                    <input type="text" th:field="*{imageUrl}" class="form-control" placeholder="Məs: /uploads/team1.jpg"/>
                 </div>
+
+                <!-- Facebook -->
                 <div class="col-md-6 mb-3">
                     <label>Facebook</label>
-                    <input type="text" th:field="*{facebook}" class="form-control"/>
+                    <input type="text" th:field="*{facebook}" class="form-control" placeholder="https://facebook.com/..."/>
                 </div>
+
+                <!-- Instagram -->
                 <div class="col-md-6 mb-3">
                     <label>Instagram</label>
-                    <input type="text" th:field="*{instagram}" class="form-control"/>
+                    <input type="text" th:field="*{instagram}" class="form-control" placeholder="https://instagram.com/..."/>
                 </div>
+
+                <!-- Filial seçimi -->
+                <div class="col-md-6 mb-3">
+                    <label>Filial</label>
+                    <select class="form-select" th:field="*{branchId}" required>
+                        <option value="" disabled selected>Filial seçin</option>
+                        <option th:each="b : ${branches}"
+                                th:value="${b.id}"
+                                th:text="${b.name}">
+                        </option>
+                    </select>
+                </div>
+
             </div>
-            <button class="btn btn-primary"><i class="bi bi-save"></i> Yadda Saxla</button>
+
+            <!-- Yadda saxla düyməsi -->
+            <div class="mt-3">
+                <button class="btn btn-primary">
+                    <i class="bi bi-save me-1"></i> Yadda Saxla
+                </button>
+                <a th:href="@{/admin/team-members}" class="btn btn-secondary ms-2">
+                    <i class="bi bi-arrow-left-circle"></i> Geri qayıt
+                </a>
+            </div>
+
         </form>
     </div>
 </main>
 </html>
+
