--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -70,6 +70,9 @@
                 <a href="/price" class="nav-item nav-link"
                    th:classappend="${activePage == 'price'} ? ' active' : ''">Qiymətlər</a>
 
+                <a href="/booking" class="nav-item nav-link"
+                   th:classappend="${activePage == 'booking'} ? ' active' : ''">Rezervasiya</a>
+
 
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Səhifələr</a>
